2003-09-08  Peter O'Gorman  <ogorman@users.sourceforge.net>

	* VirtPackage.pm: Autodetect X11 (I hope, maybe, Please test/fix)

2003-09-06  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: Allow prebinding whenever the distribution is
	greater than or equal to 10.2-gcc3.3 .

2003-09-04  Justin F. Hallett  <thesin@users.sourceforge.net>

	* PkgVersion.pm: Changed the way Type: perl works, it now can use
	ConfigureParams and makes ue of %c like normal builds, this will
	standarize how perlmodules and normal packages are packaged.

2003-08-28  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: fix regex for detecting OS X version

2003-08-27  Justin F. Hallett  <thesin@users.sourceforge.net>

	* PkgVersion.pm: fix my mistake of using has_param instead of
	param_boolean like I should have the first time
	* Validate.pm: Added NoPerlType to valid field list and boolean list

2003-08-27  Justin F. Hallett  <thesin@users.sourceforge.net>

	* PkgVersion.pm: Added NoPerlTests field to info file for Type: perl
	this will make it easier fo rthe maintainers to keep the pkgs compat
	since you will nolonger need to manually type the configure params to
	remove the make test proceedure.

2003-08-20  Peter O'Gorman  <ogorman@users.sourceforge.net>

	* PkgVersion.pm: Print the expected an actual checksums when comparison
	fails. Saves me typing "md5 /sw/src".

2003-08-19  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: Check gcc_select when the GCC field is present,
	and exit with an error if the wrong version of gcc has been selected.

2003-08-14  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: Disable the prebinding code unless the distribution
	is > 10.2.
	* Bootstrap.pm, SelfUpdate.pm: Add gettext-bin to the bootstrap and
	update lists (in preparation for making it non-essential)
	* Bootstrap.pm: Move the code which enables the 10.3 distribution to
	a new branch, "test_10_3"
	